@@ -290,11 +290,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
       http://svn.apache.org/viewvc?view=rev&revision=565671
       +1: niq
  
-    * main core: Emit errors during the initial apr_app_initialize()
-      or apr_pool_create() (when apr-based error reporting is not ready).
-        http://svn.apache.org/viewvc?view=rev&revision=568779
-        +1: wrowe, rpluem, jim
-
 
 PATCHES/ISSUES THAT ARE STALLED
 
